--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "name": "Todo-list",
+    "description": "Todo list.",
+    "keywords": ["Todo", "list", "work", "manage"],
     "license": "MIT",
     "type": "project",
     "require": {
